syntax = "proto3";

package hero;

message FindOneHeroConditions {
  optional int32 id = 1;
  optional string type = 2;
}

message Hero {
  int32 id = 1;
  string name = 2;
  string type = 3;
}
